@@ -123,7 +123,7 @@ $@ = '';
 {
     $ENV{EVAL_TEST} = 1;
     eval { install_trace(); };
-    like ($@, qr/can't load Devel::Examine::Subs/, "install_trace() dies if there is an eval error");
+    like ($@, qr/Devel::Examine::Subs isn't installed/, "install_trace() dies if there is an eval error");
 
     delete $ENV{EVAL_TEST};
 
